package com.udacity.project4

import android.app.Application
import android.util.Log
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.closeSoftKeyboard
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.utils.EspressoIdlingResource
import junit.framework.TestCase.assertTrue
import kotlinx.coroutines.runBlocking
import org.hamcrest.CoreMatchers.not
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get

@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application
    private lateinit var activity: RemindersActivity
    private val dataBindingIdlingResource = DataBindingIdlingResource()
    @get:Rule
    var activityTestRule: ActivityTestRule<RemindersActivity> =
        ActivityTestRule(RemindersActivity::class.java)
    private val runningLaterThanQ = android.os.Build.VERSION.SDK_INT >
            android.os.Build.VERSION_CODES.Q
    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()
        activity = activityTestRule.activity
        Log.i("Test",activity.localClassName)

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
    }

    /**
     * Unregister your Idling Resource so it can be garbage collected and does not leak any memory.
     */
    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }

    @Test
    fun saveReminderScreen_emptyTitleSnackBar() {
        //When Saving a new Reminder without entering a title
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())
        onView(withId(R.id.reminderDescription))
            .perform(ViewActions.typeText("Test Description"))
        closeSoftKeyboard()
        onView(withId(R.id.selectLocation)).perform(ViewActions.click())
        //Wait till map loads
        Thread.sleep(5000)
        onView(withId(R.id.map)).perform(ViewActions.longClick())
        onView(withId(R.id.saveButton)).perform(ViewActions.click())
        onView(withId(R.id.saveReminder)).perform(ViewActions.click())
        val snackBarMessage = appContext.getString(R.string.err_enter_title)
        //Then a SnackBar should appear when trying to save empty Title
        Espresso.onView(ViewMatchers.withText(snackBarMessage))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        activityScenario.close()
    }
    @Test
    fun saveReminderScreen_emptyLocationSnackBar() {
        //When Saving a new Reminder without selecting a location
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())
        onView(withId(R.id.reminderTitle)).perform(ViewActions.typeText("Test Title"))
        closeSoftKeyboard()
        onView(withId(R.id.reminderDescription))
            .perform(ViewActions.typeText("Test Description"))
        closeSoftKeyboard()
        onView(withId(R.id.saveReminder)).perform(ViewActions.click())
        val snackBarMessage = appContext.getString(R.string.err_select_location)
        //Then a SnackBar should appear when trying to save empty Location
        onView(ViewMatchers.withText(snackBarMessage))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        activityScenario.close()
    }
    @Test
    fun saveReminderScreen_isNotEmptyTitleAndLocation() {
        //Only Run the test on devices with api less than or equal 29 Because api's > 29 have an issue testing Toasts
        //Reference to the issue: https://github.com/android/android-test/issues/803
        if (!runningLaterThanQ) {
            //When Saving a new Reminder with title and location (Not empty)
            val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
            dataBindingIdlingResource.monitorActivity(activityScenario)

            onView(withId(R.id.addReminderFAB)).perform(ViewActions.click())
            onView(withId(R.id.reminderTitle)).perform(ViewActions.typeText("Test Title"))
            closeSoftKeyboard()
            onView(withId(R.id.reminderDescription))
                .perform(ViewActions.typeText("Test Description"))
            closeSoftKeyboard()
            onView(withId(R.id.selectLocation)).perform(ViewActions.click())
            //Wait till map loads
            Thread.sleep(5000)
            onView(withId(R.id.map)).perform(ViewActions.longClick())
            onView(withId(R.id.saveButton)).perform(ViewActions.click())
            onView(withId(R.id.saveReminder)).perform(ViewActions.click())
            //Then a toast Should Appear saying added.
            onView(withText(activity.getString(R.string.reminder_saved)))
                .inRoot(withDecorView(not(activity.window.decorView)))
                .check(matches(isDisplayed()));
            activityScenario.close()
        }
    }


}
